WISH: load system-wide config file even if we don't have one
WISH: look into XAddConnectionWatch, does anybody need that?
DUMB: support tex fonts

TODO:   /*TODO: the xlceararea/xfillrectangle below don't take scroll offste into account, ask mikachu for details */

TODO: artificially enlargen wide characters at end to correctly cut&paste.
TODO: cursor over overlays, when focus change?
TODO: focus leave == reset urgent hint?
	- remove bogus "setuid/setgid security issues" from rxvt.1.pod, they
          no longer apply.
	- perl 5.10 needs PERL_SYS_INIT3 on hppa.
	- ignore byte-order marks and do not treat them like combining characters.
        - fix build issue when CURSOR_BLINK is not defined (Emanuele Giaquinta).
        - do some µ-optimisations to the character fast path.

9.05 Sun Jun 15 20:09:20 CEST 2008
	- new option --cd/chdir to set the starting working directory.
        - tabbed extension now starts in the "correct" working directory.
	- work around fedora 9 providing isastream but not the relevant
          header file for it (report by Tuncer Ayaz).
	- upgrade libev, fixing a bug in the select backend
          with more than 31 file descriptors on non-linux 64 bit systems.
	- correctly reset the multibyte state to the initial one
          after EILSEQ (patch by Neil Booth). This fixes the
          issue of rxvt-unicode not properly displaying text after an illegal
          sequence on NetBSD and probably other systems.
        - more intelligent property handling with -pe tabbed, works around
          broken window managers (kwm et al.), saves bandwidth and should
          help working window managers as well.
	- made tabs moveable (based on a patch by Petr Machata).
        - implement ESC [ 3 K as a more rational alternative to ESC [ 0 K.
        - support relative paths for RXVT_SOCKET in urxvtd.
        - the tabbed extension now blindly copies over all (rxvt-) resources
          from the toplevel window to the children.